--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,13 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/style"
+              ]
+            }
           },
           "configurations": {
             "production": {
