--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,6 @@
             "styles": [
               "src/styles.scss"
             ],
-
             "stylePreprocessorOptions": {
               "includePaths": [
                 "src/style"
@@ -90,8 +89,22 @@
               "src/styles.scss"
             ]
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
