--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "doc": "npx compodoc -p tsconfig.app.json --serve --includes ./documentation"
+    "lint": "ng lint",
+    "doc": "npx compodoc -p tsconfig.app.json --serve --includes ./documentation",
+    "check" : "npx eslint src/ --fix" 
   },
   "private": true,
   "dependencies": {
@@ -26,12 +28,15 @@
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "20.4.0",
+    "eslint": "^9.37.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.8.2",
+    "typescript-eslint": "8.46.0"
   }
 }
