feat(store): add NgRx store with reducer, action, selector, and effects
- Implemented gameState store with type-safe reducer and modifyGameState action
- Added selectors for size, opponent, and hardness
- Introduced GameStateStorageEffects to persist state to sessionStorage
- Refactored parseFromStorage utility to safely parse JSON from local/session storage
- Improved JSDoc comments across store, effects, and helper functions
- Fixed minor bugs in initial state handling and default value fallbacks

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "doc": "npx compodoc -p tsconfig.app.json --serve --includes ./documentation",
-    "check" : "npx eslint src/ --fix" 
+    "check": "npx eslint src/ --fix"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +19,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ngrx/effects": "^20.1.0",
+    "@ngrx/store": "^20.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
